# LogParser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  mkdocs.yml
docs/: filtering.md  format-strings.md  getting-started.md  index.md  keybindings.md
file_parsing/: CMakeLists.txt  file_parser.cpp  file_parser.hpp  line_filter.cpp
frontends/: CMakeLists.txt
frontends/term/: CMakeLists.txt  main.cpp
line_parsing/: CMakeLists.txt  line_format.hpp  line_parser.cpp  line_parser.hpp  parsing_basics.cpp  parsing_basics.hpp  parsing_data.cpp  parsing_data.hpp
parsing/: CMakeLists.txt  parser.cpp  parser.hpp  parsing_basics.cpp  parsing_data.cpp  parsing_data.hpp
scripts/: new_module.py
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  cyclic_deque.hpp  logging.c  logging.h  logging.hpp  string_utils.cpp  string_utils.hpp
src/config/: CMakeLists.txt  ConfigHandler.cpp  ConfigHandler.hpp
src/file_parsing/: CMakeLists.txt  common.hpp  file_parser.cpp  file_parser.hpp  filter_parsing.cpp  filtered_file_reader.cpp  filtered_file_reader.hpp  line_filter.cpp  line_filter.hpp  log_parser_interface.cpp  log_parser_interface.hpp  processed_line.cpp  processed_line.hpp
src/frontends/term/: CMakeLists.txt  main.cpp
src/frontends/term/include/: filter_parsing.hpp  log_parser_terminal.hpp  lp_terminal_module.hpp  terminal_modules.hpp  terminal_state.hpp
src/frontends/term/src/: log_parser_terminal.cpp
src/frontends/term/src/modules/: arrows_module.cpp  config_manager_module.cpp  cursor_move_module.cpp  filter_management_module.cpp  hide_latest_error_module.cpp  text_search_module.cpp  vim_motions_module.cpp  vim_quit_module.cpp  wasd_module.cpp
src/line_parsing/: CMakeLists.txt  line_format.hpp  line_parser.cpp  line_parser.hpp  parsing_basics.cpp  parsing_basics.hpp  parsing_data.cpp  parsing_data.hpp
tests/: CMakeLists.txt  test.cpp  test_cyclic_deque.cpp  test_filter_roundtrip.cpp  test_filtered_file_reader.cpp  test_filters.cpp  test_find_next_occurence.cpp  test_helpers.hpp  test_jump_to_local_line.cpp  test_line_filter.cpp  test_line_format.cpp  test_line_parser.cpp  test_log_parser_interface.cpp  test_log_parser_terminal.cpp  test_main.cpp
tests/data/: tmp.out
tests/modules/: test_arrows_module.cpp  test_cursor_move_module.cpp  test_filter_management_module.cpp  test_text_search_module.cpp  test_vim_motions_module.cpp  test_wasd_module.cpp
